--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,38 @@
+/*loader*/
+.no-js #loader { display: none;  }
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.se-pre-con {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url(../images/loader.gif) center no-repeat #fff;
+}
+
 .fullscreen-bg {
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+    min-width: 100%;
+  	min-height: 100%;
     overflow: hidden;
     z-index: -100;
+    background-size: cover;
 }
 
 .tint {
-    background: rgba(0,0,0,0.7);
+    background: rgba(0,0,0,0.8);
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     overflow: hidden;
-    z-index: 100;
+    z-index: 0;
 }
 
 .fullscreen-bg__video {
@@ -26,4 +42,46 @@
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.roboto {
+  font-family: 'Roboto', sans-serif;
+  z-index: 100;
+  -webkit-text-stroke-color: rgb(255,255,255);
+  -webkit-text-stroke-width: 1px;
+  -webkit-font-smoothing: antialiased;
+}
+
+.topRight{
+  position: absolute;
+  left:80%;
+  top:5%;
+}
+
+.buttonPink {
+	outline: none;
+	height: 40px;
+	text-align: center;
+	width: 130px;
+	border-radius: 40px;
+	background: transparent;
+	border: 2px solid #F50057;
+	color: #F50057;
+	letter-spacing: 1px;
+	text-shadow: 0;
+	font-size: 15px;
+	font-weight: bold;
+	cursor: pointer;
+	-webkit-transition: all 0.25s ease;
+	transition: all 0.25s ease;
+}
+.buttonPink:hover {
+	color: white;
+	background: #F50057;
+}
+.buttonPink:active {
+	letter-spacing: 2px;
+}
+.buttonPink:after {
+
 }
