--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 	top: 0px;
 	width: 100%;
 	height: 100%;
-	z-index: 9999;
+	z-index: 999;
 	background: url(../images/loader.gif) center no-repeat #fff;
 }
 
@@ -18,7 +18,8 @@
     bottom: 0;
     left: 0;
     min-width: 100%;
-  	min-height: 100%;
+		height: 100%;
+  	/*min-height: 100%;*/
     overflow: hidden;
     z-index: -100;
     background-size: cover;
@@ -53,9 +54,9 @@
 }
 
 .topRight{
-  position: absolute;
-  left:80%;
-  top:5%;
+  position: fixed;
+  top : 1.5em;
+	right : 1.5em;
 }
 
 .buttonPink {
@@ -84,4 +85,19 @@
 }
 .buttonPink:after {
 
+}
+
+.content {
+	position : relative;
+	top : 6em ;
+}
+
+#notes{
+	background-color: #FF8F00;
+	border-radius: 15px;
+	height: 13em;
+	width: 12em;
+	position: fixed;
+	bottom: 1.5em;
+	right: 1.5em;
 }
