--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 	width: 100%;
 	height: 100%;
 	z-index: 999;
-	background: url(../images/loader.gif) center no-repeat #fff;
+	/*background: url(../images/loader.gif) center no-repeat #fff;*/
 }
 
 .fullscreen-bg {
@@ -18,8 +18,7 @@
     bottom: 0;
     left: 0;
     min-width: 100%;
-		height: 100%;
-  	/*min-height: 100%;*/
+  	min-height: 100%;
     overflow: hidden;
     z-index: -100;
     background-size: cover;
@@ -37,8 +36,7 @@
 }
 
 .fullscreen-bg__video {
-
-    position: absolute;
+	position: absolute;
     top: 0;
     left: 0;
     width: 100%;
@@ -48,14 +46,16 @@
 .roboto {
   font-family: 'Roboto', sans-serif;
   z-index: 100;
+	font-weight: 100;
   -webkit-text-stroke-color: rgb(255,255,255);
   -webkit-text-stroke-width: 1px;
   -webkit-font-smoothing: antialiased;
 }
 
 .topRight{
-  position: fixed;
-  top : 1.5em;
+  	position: fixed;
+	z-index: 200;
+  	top : 1.5em ;
 	right : 1.5em;
 }
 
@@ -100,4 +100,71 @@
 	position: fixed;
 	bottom: 1.5em;
 	right: 1.5em;
+	z-index: 200;
+}
+
+/* ---------------------  clock loader  --------------------*/
+
+.clock{
+	border-radius: 60px;
+	border: 3px solid #fff;
+	height: 80px;
+	width: 80px;
+	position: relative;
+
+	top: 28%;
+	top: -webkit-calc(50% - 43px);
+	top: calc(50% - 43px);
+	left: 35%;
+	left: -webkit-calc(50% - 43px);
+	left: calc(50% - 43px);
+}
+.clock:after{
+	content: "";
+	position: absolute;
+	background-color: #fff;
+	top:2px;
+	left: 48%;
+	height: 38px;
+	width: 4px;
+	border-radius: 5px;
+	-webkit-transform-origin: 50% 97%;
+	transform-origin: 50% 97%;
+	-webkit-animation: grdAiguille 2s linear infinite;
+	animation: grdAiguille 2s linear infinite;
+}
+
+@-webkit-keyframes grdAiguille{
+	0%{-webkit-transform:rotate(0deg);}
+	100%{-webkit-transform:rotate(360deg);}
+}
+
+@keyframes grdAiguille{
+	0%{transform:rotate(0deg);}
+	100%{transform:rotate(360deg);}
+}
+
+.clock:before{
+	content: "";
+	position: absolute;
+	background-color: #fff;
+	top:6px;
+	left: 48%;
+	height: 35px;
+	width: 4px;
+	border-radius: 5px;
+	-webkit-transform-origin: 50% 94%;
+	transform-origin: 50% 94%;
+	-webkit-animation: ptAiguille 12s linear infinite;
+	animation: ptAiguille 12s linear infinite;
+}
+
+@-webkit-keyframes ptAiguille{
+	0%{-webkit-transform:rotate(0deg);}
+	100%{-webkit-transform:rotate(360deg);}
+}
+
+@keyframes ptAiguille{
+	0%{transform:rotate(0deg);}
+	100%{transform:rotate(360deg);}
 }
