--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:100,300);
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,300);
 #pagepiling {
   font-family: Roboto;
 }
