every thing resolved

--- a/public/views/portfolio.html
+++ b/public/views/portfolio.html
@@ -8,7 +8,7 @@
 <div id="pagepiling">
     <div class="section" style="background-color:#424242">
         <!-- -------------------------  basic info division ----------------------- -->
-        <div id="basic-info" class="container" style="width: 60%;">
+        <div id="basic-info" class="container" style="width: 60%;" ng-init="init()">
             <!-- -------  tinted video  ------- -->
             <div class="fullscreen-bg video-responsive">
                 <video loop muted autoplay poster="images/hny.png" class="fullscreen-bg__video">
@@ -42,9 +42,7 @@
                     <h1 id="" class="skills" style="position: fixed ; top: 3% ; left: 45% ;color: white ; font-size: 3.6vw; font-weight: 300;"><b>SKILLS</b></h1>
                     <div class="row">
                         <div class="col-md-4">
-                            <div id="container" style="height: 500px ; width: 500px; background-color: pink;">
-                                <a ui-sref="temporary">click me</a>
-                            </div>
+
                         </div>
                     </div>
                 </div>
