--- a/public/views/index2.html
+++ b/public/views/index2.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html  ng-app="portfolio">
 <head>
 	<meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script type="text/javascript">
 		window.onload = function() {
 			// Animate loader off screen
-			// alert("haha") ;
 			$(".se-pre-con").fadeOut("slow" , function(){
 				$("#heading").addClass("animated slideInUp" , 2500) ;
 				$("#headName").addClass("sliding-middle-out") ;
@@ -18,8 +17,6 @@
 	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="bower_components/pagePiling.js/jquery.pagepiling.min.js"></script>
 	<srcipt src="bower_components/progressbar.js/dist/progressbar.js"></srcipt>
-	<script src="frameworks/particleground-master/jquery.particleground.js"></script>				<!-- particle ground js framework -->
-	<script src="frameworks/particleground-master/demo/js/demo.js"></script>  								<!-- particle ground js framework's demo js -->
 
 
 <!-- -------------------------------   angular components   --------------------------- -->
@@ -44,11 +41,10 @@
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link href="bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet" />
 	<link href="bower_components/pagePiling.js/jquery.pagepiling.css" rel="stylesheet">
-  <link href="bower_components/animate.css/animate.css" rel="stylesheet" />
-	<!-- <link href="frameworks/particleground-master/demo/css/style.css" rel="stylesheet">		<!-- particle ground js framework's demo css -->
-  <link rel="stylesheet" href="css/style.css">
+  	<link href="bower_components/animate.css/animate.css" rel="stylesheet" />
+  	<link rel="stylesheet" href="css/style.css">
 </head>
-<body ng-app="portfolio">
+<body>
 	<!-- --------------------------------------------------------------------------------  loader division --------------------------------------------------------- -->
 	<div class="se-pre-con" style="background-color: #e74c3c">
 		<div class="loader">
