--- a/public/views/portfolio.html
+++ b/public/views/portfolio.html
@@ -1,22 +1,22 @@
 <!-- -------------------------  Resume button --------------------------- -->
 <button class="buttonPink topRight"><i class="fa fa-download" aria-hidden="true"></i>  Resume</button>
 <!-- -------------------------  Daily Notes --------------------------- -->
-<div id="notes">
+<div id="notes" class="hidden-xs hidden-sm">
     <h3 class="text-center" style="font-family: 'Handlee', cursive;"><b>Notes</b></h3>
 </div>
 
 <div id="pagepiling">
     <div class="section" style="background-color:#424242">
-        <!-- -------------------------  basic info division ----------------------- -->
-        <div id="basic-info" class="container" style="width: 60%;" ng-init="init()">
+        <!-- -------------------------  basic info division   [ =====   LARGE DEVICES  ===== ]----------------------- -->
+        <div id="basic-info" class="container hidden-sm hidden-xs" style="width: 60%;" ng-init="init()">
             <!-- -------  tinted video  ------- -->
-            <div class="fullscreen-bg video-responsive">
-                <video loop muted autoplay poster="images/hny.png" class="fullscreen-bg__video">
-                    <source src="video/out-5.ogv" type="video/ogg">
-                </video>
-                <div class="tint">
-                </div>
-            </div>
+            <!--<div class="fullscreen-bg video-responsive">-->
+                <!--<video loop muted autoplay poster="images/hny.png" class="fullscreen-bg__video">-->
+                    <!--<source src="video/out-5.ogv" type="video/ogg">-->
+                <!--</video>-->
+                <!--<div class="tint">-->
+                <!--</div>-->
+            <!--</div>-->
             <!-- -------- heading   ------- -->
             <div class="">
                 <!-- --------   content   --------- -->
@@ -34,21 +34,36 @@
                 <a class="scrollDown" style="cursor: pointer"><span></span></a>
             </div>
         </div>
-    </div>
-    <div class="section" style="background-color: #009688" id="skills">
-        <div id="particles" style="position: relative;">
-            <div id="intro" class="text-center">
-                <div>
-                    <h1 id="" class="skills" style="position: fixed ; top: 3% ; left: 45% ;color: white ; font-size: 3.6vw; font-weight: 300;"><b>SKILLS</b></h1>
-                    <div class="row">
-                        <div class="col-md-4">
-
-                        </div>
-                    </div>
+        <!-- -------------------------  basic info division   [ =====   SMALL DEVICES  ===== ]----------------------- -->
+        <div id="basic-info" class="container hidden-lg hidden-md" style="width: 100%; padding: 0px; margin: 0px;">
+            <!-- -------  tinted video  ------- -->
+            <!--<div class="fullscreen-bg video-responsive">-->
+            <!--<video loop muted autoplay poster="images/hny.png" class="fullscreen-bg__video">-->
+            <!--<source src="video/out-5.ogv" type="video/ogg">-->
+            <!--</video>-->
+            <!--<div class="tint">-->
+            <!--</div>-->
+            <!--</div>-->
+            <!-- -------- heading   ------- -->
+            <div class="text-center">
+                <!-- --------   content   --------- -->
+                <div id="heading" class="animated slideInUp">
+                    <p id="headName" class="text-center" style="color : white; font-size: 3em; font-weight:lighter; margin: 0px;">puneet222.github.io</p>
+                    <p class="text-right" style="color: white; font-size: 1em; font-weight: 100">( Full Stack Developer )</p>
                 </div>
-                <!-- <p>A JavaScript plugin for snazzy background particle systems</p> -->
+                <br>
+                <h4 class="text-center animated zoomIn" style="color : white; font-size: 0.9em; font-weight:300; letter-spacing: 2px;padding: 0 8px;margin-top: 0px;">Hello! My name is Puneet Aggarwal.
+                    Currently I'm pursuing B.E. (Computer Science) from PEC Unversity of Technology, Chandigarh. I'm very enthusiastic about web development, and always very
+                    interested to learn about latest technologies. I also like to read blogs and sometimes inmy free time I use to do sketching, painting. I'm also a
+                    TV Series addict and love to read novels.</h4>
             </div>
+            <!--<div class="text-center" style="position: fixed ; top: 90%; text-align: center; margin-left: 28%;">-->
+                <!--<a class="scrollDown" style="cursor: pointer"><span></span></a>-->
+            <!--</div>-->
         </div>
+    </div>
+    <div class="section" style="background-color: #009688">
+        <h5 class="text-center topCenter roboto" id="skills" style="color: white; font-size: 5vh">SKILLS</h5>
     </div>
     <div class="section" style="background-color: #F44336">
 
