--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,300);
-#pagepiling {
+#fullpage {
   	font-family: Roboto;
 }
 
@@ -20,23 +20,6 @@
 	/*background: url(../images/loader.gif) center no-repeat #fff;*/
 }
 
-.fullscreen-bg {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    min-width: 100%;
-  	min-height: 100%;
-    overflow: hidden;
-    z-index: -1;
-    background-position: center center;
-    background-repeat: no-repeat;
-	transform: translate(-50%, -50%);
-    /*background-attachment: fixed;*/
-    /*background-size: cover;*/
-}
-
 .tint {
     background: rgba(0,0,0,0.8);
     position: fixed;
@@ -46,14 +29,6 @@
     left: 0;
     overflow: hidden;
     z-index: 0;
-}
-
-.fullscreen-bg__video {
-	position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
 }
 
 /*.roboto {
@@ -275,5 +250,27 @@
 	height: 1.5vh;
 	background-color: orangered;
 	border: 0px;
+}
+
+.progress {
+	height: 35px;
+
+}
+.progress .skill {
+	font: normal 12px "Open Sans Web";
+	line-height: 35px;
+	padding: 0;
+	margin: 0 0 0 20px;
+	text-transform: uppercase;
+}
+.progress .skill .val {
+	float: right;
+	font-style: normal;
+	margin: 0 20px 0 0;
+}
+
+.progress-bar {
+	text-align: left;
+	transition-duration: 3s;
 }
 
