--- a/public/views/portfolio.html
+++ b/public/views/portfolio.html
@@ -1,95 +1,134 @@
-<!--<div ng-init="init()" id="port">-->
-    <!--&lt;!&ndash; -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;  Resume button -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;-->
+<div ng-init="init()">
+    <!--&lt;!&ndash; -------------------------------------------------  Resume button ----------------------------------------------------- &ndash;&gt;-->
     <!--<button class="buttonPink topRight"><i class="fa fa-download" aria-hidden="true"></i>  Resume</button>-->
-    <!--&lt;!&ndash; -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;  Daily Notes -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;-->
+    <!--&lt;!&ndash; -------------------------------------------------  Daily Notes ----------------------------------------------------- &ndash;&gt;-->
     <!--<div id="notes" class="hidden-xs hidden-sm">-->
         <!--<h3 class="text-center" style="font-family: 'Handlee', cursive;"><b>Notes</b></h3>-->
     <!--</div>-->
 
 
-    <!--&lt;!&ndash; -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;  basic info division   [ =====   LARGE DEVICES  ===== ]-&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;-->
-    <!--<div id="basic-info" class="container hidden-sm hidden-xs">-->
-    <!--&lt;!&ndash; -&#45;&#45;&#45;&#45;&#45;&#45;  tinted video  -&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;-->
-    <!--&lt;!&ndash;<div class="fullscreen-bg video-responsive">&ndash;&gt;-->
-    <!--&lt;!&ndash;<video loop muted autoplay poster="images/hny.png" class="fullscreen-bg__video">&ndash;&gt;-->
-    <!--&lt;!&ndash;<source src="video/out-5.ogv" type="video/ogg">&ndash;&gt;-->
-    <!--&lt;!&ndash;</video>&ndash;&gt;-->
-    <!--&lt;!&ndash;<div class="tint">&ndash;&gt;-->
-    <!--&lt;!&ndash;</div>&ndash;&gt;-->
-    <!--&lt;!&ndash;</div>&ndash;&gt;-->
-    <!--&lt;!&ndash; &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; heading   -&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;-->
-    <!--<div class="">-->
-    <!--&lt;!&ndash; &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;   content   -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;-->
-    <!--<div id="heading" class="animated slideInUp">-->
-    <!--<p id="headName" class="text-center" style="color : white; font-size: 7vw; font-weight:lighter; margin: 0px;">puneet222.github.io</p>-->
-    <!--<p class="text-right" style="color: white; font-size: 1.5vw; font-weight: 100">( Full Stack Developer )</p>-->
-    <!--</div>-->
-    <!--<br>-->
-    <!--<h4 class="text-center animated zoomIn" style="color : white; font-size: 1.5vw; font-weight:300; letter-spacing: 2px;">Hello! My name is Puneet Aggarwal.-->
-    <!--Currently I'm pursuing B.E. (Computer Science) from PEC Unversity of Technology, Chandigarh. I'm very enthusiastic about web development, and always very-->
-    <!--interested to learn about latest technologies. I also like to read blogs and sometimes inmy free time I use to do sketching, painting. I'm also a-->
-    <!--TV Series addict and love to read novels.</h4>-->
-    <!--</div>-->
-    <!--<div class="text-center" style="position: fixed ; top: 90%; text-align: center; margin-left: 28%;">-->
-    <!--<a class="scrollDown" style="cursor: pointer"><span></span></a>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--&lt;!&ndash; -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;  basic info division   [ =====   SMALL DEVICES  ===== ]-&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;-->
-    <!--<div id="basic-info" class="container hidden-lg hidden-md" style="width: 100%; padding: 0px; margin: 0px;">-->
-    <!--&lt;!&ndash; -&#45;&#45;&#45;&#45;&#45;&#45;  tinted video  -&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;-->
-    <!--&lt;!&ndash;<div class="fullscreen-bg video-responsive">&ndash;&gt;-->
-    <!--&lt;!&ndash;<video loop muted autoplay poster="images/hny.png" class="fullscreen-bg__video">&ndash;&gt;-->
-    <!--&lt;!&ndash;<source src="video/out-5.ogv" type="video/ogg">&ndash;&gt;-->
-    <!--&lt;!&ndash;</video>&ndash;&gt;-->
-    <!--&lt;!&ndash;<div class="tint">&ndash;&gt;-->
-    <!--&lt;!&ndash;</div>&ndash;&gt;-->
-    <!--&lt;!&ndash;</div>&ndash;&gt;-->
-    <!--&lt;!&ndash; &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; heading   -&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;-->
-    <!--<div class="text-center">-->
-    <!--&lt;!&ndash; &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;   content   -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;-->
-    <!--<div id="heading" class="animated slideInUp">-->
-    <!--<p id="headName" class="text-center" style="color : white; font-size: 3em; font-weight:lighter; margin: 0px;">puneet222.github.io</p>-->
-    <!--<p class="text-right" style="color: white; font-size: 1em; font-weight: 100">( Full Stack Developer )</p>-->
-    <!--</div>-->
-    <!--<br>-->
-    <!--<h4 class="text-center animated zoomIn" style="color : white; font-size: 0.9em; font-weight:300; letter-spacing: 2px;padding: 0 8px;margin-top: 0px;">Hello! My name is Puneet Aggarwal.-->
-    <!--Currently I'm pursuing B.E. (Computer Science) from PEC Unversity of Technology, Chandigarh. I'm very enthusiastic about web development, and always very-->
-    <!--interested to learn about latest technologies. I also like to read blogs and sometimes inmy free time I use to do sketching, painting. I'm also a-->
-    <!--TV Series addict and love to read novels.</h4>-->
-    <!--</div>-->
-    <!--&lt;!&ndash;<div class="text-center" style="position: fixed ; top: 90%; text-align: center; margin-left: 28%;">&ndash;&gt;-->
-    <!--&lt;!&ndash;<a class="scrollDown" style="cursor: pointer"><span></span></a>&ndash;&gt;-->
-    <!--&lt;!&ndash;</div>&ndash;&gt;-->
-    <!--</div>-->
 
 
 
 
 
 
-    <!--<h5 class="text-center topCenter roboto" id="skills" style="color: white; font-size: 5vh">SKILLS{{ html }}</h5>-->
-    <!--<div class="row">-->
-    <!--<div class="col-md-4 col-lg-4 col-sm-12 col-xs-12">    &lt;!&ndash; -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;    Skills Part 1    &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;-->
-    <!--<div class="row" style="padding: 10px;">-->
-    <!--<div class="col-md-3 col-sm-3 col-lg-3 col-xs-3">-->
-    <!--<h5 style="color: white">HTML amkad </h5>-->
-    <!--</div>-->
-    <!--<div class="col-md-9 col-sm-9 col-lg-9 col-xs-9" style=" padding-top: 2vh;">-->
-    <!--<div class="progress progressBarBackground">-->
-    <!--<div class="progress-bar six-sec-ease-in-out progressBarForeGround" role="progressbar" data-transitiongoal="60" style="background-color: #b92c28"></div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<div class="col-md-4 col-lg-4 col-sm-12 col-xs-12" >    &lt;!&ndash; -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;    Skills Part 2    &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;-->
 
-    <!--</div>-->
-    <!--<div class="col-md-4 col-lg-4 col-sm-12 col-xs-12" >    &lt;!&ndash; -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;    Skills Part 3    &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;-->
 
+
+
+    <!--<div class="progress" style="background-color: transparent; height: 1.5vh; border-radius: 6px; border: 0px">-->
+    <!--<div class="progress-bar six-sec-ease-in-out" role="progressbar" data-transitiongoal="50" style="height: 1.5vh; background-color: orangered; border: 0px;"></div>-->
     <!--</div>-->
-    <!--</div>-->
-    <!--&lt;!&ndash;<div class="progress" style="background-color: transparent; height: 1.5vh; border-radius: 6px; border: 0px">&ndash;&gt;-->
-    <!--&lt;!&ndash;<div class="progress-bar six-sec-ease-in-out" role="progressbar" data-transitiongoal="50" style="height: 1.5vh; background-color: orangered; border: 0px;"></div>&ndash;&gt;-->
-    <!--&lt;!&ndash;</div>&ndash;&gt;-->
 
 <!--</div>-->
+
+    <div id="fullpage">
+        <div class="section" style="background-color: darkslategray">
+            <!-- -------------------------  basic info division   [ =====   LARGE DEVICES  ===== ]----------------------- -->
+            <div id="basic-info" class="container hidden-sm hidden-xs">
+                 <!-- -------------  tinted video  ------------- -->
+
+                 <!------------------ heading   ------------- -->
+                <div class="">
+                    <!-- --------   content   --------- -->
+                    <div id="heading" class="animated slideInUp">
+                        <p id="headName" class="text-center" style="color : white; font-size: 7vw; font-weight:lighter; margin: 0px;">puneet222.github.io</p>
+                        <p class="text-right" style="color: white; font-size: 1.5vw; font-weight: 100">( Full Stack Developer )</p>
+                    </div>
+                    <br>
+                    <h4 class="text-center animated zoomIn" style="color : white; font-size: 1.5vw; font-weight:300; letter-spacing: 2px;">Hello! My name is Puneet Aggarwal.
+                        Currently I'm pursuing B.E. (Computer Science) from PEC Unversity of Technology, Chandigarh. I'm very enthusiastic about web development, and always very
+                        interested to learn about latest technologies. I also like to read blogs and sometimes inmy free time I use to do sketching, painting. I'm also a
+                        TV Series addict and love to read novels.</h4>
+                </div>
+                <div class="text-center" style="position: fixed ; top: 90%; text-align: center; margin-left: 28%;">
+                    <a class="scrollDown" style="cursor: pointer"><span></span></a>
+                </div>
+            </div>
+
+            <!-- -------------------------  basic info division   [ =====   SMALL DEVICES  ===== ]----------------------- -->
+            <div id="basic-info" class="container hidden-lg hidden-md" style="width: 100%; padding: 0px; margin: 0px;">
+                <!-- -------  tinted video  ------- -->
+                <!--<div class="fullscreen-bg video-responsive">-->
+                    <!--<video loop muted autoplay poster="../images/hny.png" class="fullscreen-bg__video">-->
+                        <!--<source src="../video/out-5.ogv" type="video/ogg">-->
+                    <!--</video>-->
+                    <!--<div class="tint">-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!-- -------- heading   ------- -->
+                <div class="text-center">
+                    <!-- --------   content   --------- -->
+                    <div id="heading" class="animated slideInUp">
+                        <p id="headName" class="text-center" style="color : white; font-size: 7vh; font-weight:lighter; margin: 0px;">puneet222.github.io</p>
+                        <p class="text-right" style="color: white; font-size: 3vh; font-weight: 100; margin-right: 10px;">( Full Stack Developer )</p>
+                    </div>
+                    <br>
+                    <h4 class="text-center animated zoomIn" style="color : white; font-size: 3vh; font-weight:300; letter-spacing: 2px;padding: 0 8px;margin-top: 0px;">Hello! My name is Puneet Aggarwal.
+                        Currently I'm pursuing B.E. (Computer Science) from PEC Unversity of Technology, Chandigarh. I'm very enthusiastic about web development, and always very
+                        interested to learn about latest technologies. I also like to read blogs and sometimes inmy free time I use to do sketching, painting. I'm also a
+                        TV Series addict and love to read novels.</h4>
+                </div>
+                <!--<div class="text-center" style="position: fixed ; top: 90%; text-align: center; margin-left: 28%;">-->
+                <!--<a class="scrollDown" style="cursor: pointer"><span></span></a>-->
+                <!--</div>-->
+            </div>
+        </div>
+        <div class="section" style="background-color: #00b3ee">
+            <h5 class="text-center sliding-middle-out topCenter roboto" style="color: white; font-size: 5vh">Superpowers</h5>
+            <!--<div class="row">-->
+                <!--<div class="col-md-4 col-lg-4 col-sm-12 col-xs-12">    &lt;!&ndash; -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;    Skills Part 1    &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;-->
+                    <!--<div class="row" style="padding: 10px;">-->
+                        <!--<div class="col-md-3 col-sm-3 col-lg-3 col-xs-3">-->
+                            <!--<h5 style="color: white">HTML</h5>-->
+                        <!--</div>-->
+                        <!--<div class="col-md-9 col-sm-9 col-lg-9 col-xs-9" style=" padding-top: 2vh;">-->
+                            <!--<div class="progress progressBarBackground">-->
+                                <!--<div class="progress-bar six-sec-ease-in-out progressBarForeGround" role="progressbar" data-transitiongoal="60" style="background-color: #b92c28"></div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="col-md-4 col-lg-4 col-sm-12 col-xs-12" >    &lt;!&ndash; -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;    Skills Part 2    &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;-->
+
+                <!--</div>-->
+                <!--<div class="col-md-4 col-lg-4 col-sm-12 col-xs-12" >    &lt;!&ndash; -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;    Skills Part 3    &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;-->
+
+                <!--</div>-->
+            <!--</div>-->
+            <div class="row">
+                <h2>Animated Bootstrap Progress Bars by <a href="http://gridgum.com/author/agez" target="_blank">agez</a></h2>
+                <!-- Skill Bars -->
+                <div class="progress skill-bar ">
+                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                        <span class="skill">HTML <i class="val">100%</i></span>
+                    </div>
+                </div>
+
+                <div class="progress skill-bar">
+                    <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" >
+                        <span class="skill">CSS<i class="val">90%</i></span>
+                    </div>
+                </div>
+
+                <div class="progress skill-bar">
+                    <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                        <span class="skill">JavaScript<i class="val">75%</i></span>
+                    </div>
+                </div>
+
+                <div class="progress skill-bar">
+                    <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                        <span class="skill">Photoshop<i class="val">55%</i></span>
+                    </div>
+                </div>
+
+            </div>
+            <!--<div class="slide">Section 2 Slide 1</div>-->
+            <!--<div class="slide">Section 2 Slide 2</div>-->
+            <!--<div class="slide">Section 2 Slide 3</div>-->
+        </div>
+        <div class="section" style="background-color: #b92c28">Section 3</div>
+    </div>
+</div>
