--- a/public/views/index2.html
+++ b/public/views/index2.html
@@ -4,28 +4,31 @@
 	<script type="text/javascript">
         window.onload = function() {
             // Animate loader off screen
-            $(".se-pre-con").fadeOut("slow" , function(){
-                $("#heading").addClass("animated slideInUp text-center" , 2500) ;
-                $("#headName").addClass("sliding-middle-out") ;
-            });
-            $('#fullpage').fullpage({
-                onLeave: function(index, nextIndex, direction){
-                    var leavingSection = $(this);
-					console.log(leavingSection) ;
-                    //after leaving section 2
-                    if(nextIndex == 2){
-                        $('.progress .progress-bar').css("width",
-                            function() {
-                                return $(this).attr("aria-valuenow") + "%";
-                            }
-                        )
-                    }
+			$(document).ready(function () {
+                $('#fullpage').fullpage({
+                    onLeave: function(index, nextIndex, direction){
+                        var leavingSection = $(this);
+                        console.log(leavingSection) ;
+                        //after leaving section 2
+                        if(nextIndex == 2){
+                            $('.progress .progress-bar').css("width",
+                                function() {
+                                    return $(this).attr("aria-valuenow") + "%";
+                                }
+                            )
+                        }
 
-                    if(nextIndex == 2){
-                        alert("Going to section 2!");
+                        if(nextIndex == 2){
+                            alert("Going to section 2!");
+                        }
                     }
-                }
-			});
+                });
+                $(".se-pre-con").fadeOut("slow" , function(){
+                    $("#heading").addClass("animated slideInUp text-center" , 2500) ;
+                    $("#headName").addClass("sliding-middle-out") ;
+                });
+            });
+
         };
 	</script>
 	<meta charset="utf-8">
@@ -42,20 +45,14 @@
 	<link href="../../bower_components/fullpage.js/jquery.fullPage.css" rel="stylesheet" />
 	<link rel="stylesheet" href="css/style.css">
 
+
 	<!-- -------------------------------   angular components   --------------------------- -->
 	<script src="bower_components/angular/angular.js"></script>
 	<script src="bower_components/angular-animate/angular-animate.js"></script>
 	<script src="bower_components/angular-route/angular-route.min.js"></script>
 	<script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 
-	<!-- -------------------------------  some important scripts  ------------------------- -->
 
-	<script src="bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-	<srcipt src="bower_components/progressbar.js/dist/progressbar.js"></srcipt>
-	<script src="../../bower_components/bootstrap-progressbar/bootstrap-progressbar.js"></script>
-	<script src="../../bower_components/fullpage.js/vendors/jquery.easings.min.js"></script>
-	<script src="../../bower_components/fullpage.js/jquery.fullPage.min.js"></script>
 
 
 	<!-- --------------------------------  MY scripts   ----------------------------------   -->
@@ -74,7 +71,22 @@
 			<span>{</span><span>}</span>
 		</div>
 	</div>
+
+	<div class="se-pre-con" id="loader2" style="background-color: #e74c3c">
+		<div class="loader">
+			<span>{</span><span>}</span>
+		</div>
+	</div>
 	<div ui-view></div>
+
+	<!-- -------------------------------  some important scripts  ------------------------- -->
+
+	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+	<srcipt src="bower_components/progressbar.js/dist/progressbar.js"></srcipt>
+	<script src="../../bower_components/bootstrap-progressbar/bootstrap-progressbar.js"></script>
+	<script src="../../bower_components/fullpage.js/vendors/jquery.easings.min.js"></script>
+	<script src="../../bower_components/fullpage.js/jquery.fullPage.min.js"></script>
 
 </body>
 </html>
