--- a/public/views/portfolio.html
+++ b/public/views/portfolio.html
@@ -33,7 +33,7 @@
                 <div class="">
                     <!-- --------   content   --------- -->
                     <div id="heading" class="animated slideInUp">
-                        <p id="headName" class="text-center" style="color : white; font-size: 7vw; font-weight:lighter; margin: 0px;">puneet222.github.io</p>
+                        <p id="headName" class="text-center" style="color : white; font-size: 7vw; font-weight:lighter; margin: 0px;">{{ htmlll }}puneet222.github.io</p>
                         <p class="text-right" style="color: white; font-size: 1.5vw; font-weight: 100">( Full Stack Developer )</p>
                     </div>
                     <br>
@@ -75,55 +75,88 @@
                 <!--</div>-->
             </div>
         </div>
+        <!------------------------------------------   SUPER POWER SECTION   ------------------------------------------->
         <div class="section" style="background-color: #00b3ee">
-            <h5 class="text-center sliding-middle-out topCenter roboto" style="color: white; font-size: 5vh">Superpowers</h5>
-            <!--<div class="row">-->
-                <!--<div class="col-md-4 col-lg-4 col-sm-12 col-xs-12">    &lt;!&ndash; -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;    Skills Part 1    &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;-->
-                    <!--<div class="row" style="padding: 10px;">-->
-                        <!--<div class="col-md-3 col-sm-3 col-lg-3 col-xs-3">-->
-                            <!--<h5 style="color: white">HTML</h5>-->
-                        <!--</div>-->
-                        <!--<div class="col-md-9 col-sm-9 col-lg-9 col-xs-9" style=" padding-top: 2vh;">-->
-                            <!--<div class="progress progressBarBackground">-->
-                                <!--<div class="progress-bar six-sec-ease-in-out progressBarForeGround" role="progressbar" data-transitiongoal="60" style="background-color: #b92c28"></div>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="col-md-4 col-lg-4 col-sm-12 col-xs-12" >    &lt;!&ndash; -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;    Skills Part 2    &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;-->
+            <h5 class="text-center sliding-middle-out topCenter roboto" style="color: white; font-size: 5vh">Superpowers {{ htmlll }}</h5>
+            <div class="row" style="margin: 15px;">
+                <div class="col-md-4">
+                    <!-- Skill Bars -->
+                    <div class="progress skill-bar">
+                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                            <span class="skill">HTML </span>
+                        </div>
+                    </div>
 
-                <!--</div>-->
-                <!--<div class="col-md-4 col-lg-4 col-sm-12 col-xs-12" >    &lt;!&ndash; -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;    Skills Part 3    &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;-->
+                    <div class="progress skill-bar">
+                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" >
+                            <span class="skill">CSS</span>
+                        </div>
+                    </div>
 
-                <!--</div>-->
-            <!--</div>-->
-            <div class="row">
-                <h2>Animated Bootstrap Progress Bars by <a href="http://gridgum.com/author/agez" target="_blank">agez</a></h2>
-                <!-- Skill Bars -->
-                <div class="progress skill-bar ">
-                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                        <span class="skill">HTML <i class="val">100%</i></span>
+                    <div class="progress skill-bar">
+                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                            <span class="skill">JavaScript</span>
+                        </div>
+                    </div>
+
+                    <div class="progress skill-bar">
+                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                            <span class="skill">Photoshop</span>
+                        </div>
                     </div>
                 </div>
+                <div class="col-md-4">
+                    <!-- Skill Bars -->
+                    <div class="progress skill-bar">
+                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                            <span class="skill">HTML </span>
+                        </div>
+                    </div>
 
-                <div class="progress skill-bar">
-                    <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" >
-                        <span class="skill">CSS<i class="val">90%</i></span>
+                    <div class="progress skill-bar">
+                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" >
+                            <span class="skill">CSS</span>
+                        </div>
+                    </div>
+
+                    <div class="progress skill-bar">
+                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                            <span class="skill">JavaScript</span>
+                        </div>
+                    </div>
+
+                    <div class="progress skill-bar">
+                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                            <span class="skill">Photoshop</span>
+                        </div>
                     </div>
                 </div>
+                <div class="col-md-4">
+                    <!-- Skill Bars -->
+                    <div class="progress skill-bar">
+                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                            <span class="skill">HTML </span>
+                        </div>
+                    </div>
 
-                <div class="progress skill-bar">
-                    <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                        <span class="skill">JavaScript<i class="val">75%</i></span>
+                    <div class="progress skill-bar">
+                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" >
+                            <span class="skill">CSS</span>
+                        </div>
+                    </div>
+
+                    <div class="progress skill-bar">
+                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                            <span class="skill">JavaScript</span>
+                        </div>
+                    </div>
+
+                    <div class="progress skill-bar">
+                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                            <span class="skill">Photoshop</span>
+                        </div>
                     </div>
                 </div>
-
-                <div class="progress skill-bar">
-                    <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
-                        <span class="skill">Photoshop<i class="val">55%</i></span>
-                    </div>
-                </div>
-
             </div>
             <!--<div class="slide">Section 2 Slide 1</div>-->
             <!--<div class="slide">Section 2 Slide 2</div>-->
