--- a/public/views/portfolio.html
+++ b/public/views/portfolio.html
@@ -33,7 +33,7 @@
                 <div class="">
                     <!-- --------   content   --------- -->
                     <div id="heading" class="animated slideInUp">
-                        <p id="headName" class="text-center" style="color : white; font-size: 7vw; font-weight:lighter; margin: 0px;">{{ htmlll }}puneet222.github.io</p>
+                        <p id="headName" class="text-center" style="color : white; font-size: 7vw; font-weight:lighter; margin: 0px;">puneet222.github.io</p>
                         <p class="text-right" style="color: white; font-size: 1.5vw; font-weight: 100">( Full Stack Developer )</p>
                     </div>
                     <br>
@@ -76,13 +76,28 @@
             </div>
         </div>
         <!------------------------------------------   SUPER POWER SECTION   ------------------------------------------->
-        <div class="section" style="background-color: #00b3ee">
-            <h5 class="text-center sliding-middle-out topCenter roboto" style="color: white; font-size: 5vh">Superpowers {{ htmlll }}</h5>
-            <div class="row" style="margin: 15px;">
+        <div class="section" id="superpower">
+            <div class="row">
+                <div class="col-md-4 col-sm-4">
+
+                </div>
+                <div class="col-md-4 col-sm-4 text-center">
+                    <h5 class="text-center sliding-middle-out roboto" style="color: white; font-size: 6vh; font-family: 'Bungee Outline', cursive ; z-index: 10; position: absolute">Superpowers</h5>
+                </div>
+                <div class="col-md-4 col-sm-4">
+
+                </div>
+            </div>
+
+            <div id="skill-background">
+                <canvas id="sky"></canvas>
+            </div>
+
+            <div class="row hidden-sm hidden-xs" id="skills">
                 <div class="col-md-4">
                     <!-- Skill Bars -->
-                    <div class="progress skill-bar">
-                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress skill-bar" style="-webkit-box-shadow:0 0 20px blue; -moz-box-shadow: 0 0 20px blue; box-shadow:0 0 20px blue;" >
+                        <div class="progress-bar" style="background-color: #1b6d85" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                             <span class="skill">HTML </span>
                         </div>
                     </div>
@@ -158,6 +173,7 @@
                     </div>
                 </div>
             </div>
+
             <!--<div class="slide">Section 2 Slide 1</div>-->
             <!--<div class="slide">Section 2 Slide 2</div>-->
             <!--<div class="slide">Section 2 Slide 3</div>-->
