--- a/public/views/index2.html
+++ b/public/views/index2.html
@@ -19,7 +19,7 @@
                         }
 
                         if(nextIndex == 2){
-                            alert("Going to section 2!");
+
                         }
                     }
                 });
@@ -38,6 +38,13 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive" rel="stylesheet">
+
+	<link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Codystar" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Wallpoet" rel="stylesheet">
+
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link href="bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet" />
