--- a/public/views/portfolio.html
+++ b/public/views/portfolio.html
@@ -103,7 +103,7 @@
                     </div>
 
                     <div class="progress skill-bar">
-                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" >
+                        <div class="progress-bar progress-bar-info" style="background-color : rgb(244, 67, 54)" role="progressbar" aria-valuenow={{skills.css}} aria-valuemin="0" aria-valuemax="100" >
                             <span class="skill">CSS</span>
                         </div>
                     </div>
