--- a/public/views/portfolio.html
+++ b/public/views/portfolio.html
@@ -77,98 +77,203 @@
         </div>
         <!------------------------------------------   SUPER POWER SECTION   ------------------------------------------->
         <div class="section" id="superpower">
-            <div class="row">
-                <div class="col-md-4 col-sm-4">
+            <h5 class="text-center sliding-middle-out roboto" style="color: white; font-size: 6vh; font-weight: 700; font-family: 'Bungee Outline', cursive ; z-index: 10; position: absolute">Superpowers</h5>
 
-                </div>
-                <div class="col-md-4 col-sm-4 text-center">
-                    <h5 class="text-center sliding-middle-out roboto" style="color: white; font-size: 6vh; font-family: 'Bungee Outline', cursive ; z-index: 10; position: absolute">Superpowers</h5>
-                </div>
-                <div class="col-md-4 col-sm-4">
-
-                </div>
-            </div>
 
             <div id="skill-background">
                 <canvas id="sky"></canvas>
             </div>
 
             <div class="row hidden-sm hidden-xs" id="skills">
-                <div class="col-md-4">
+                <div class="col-md-2">
                     <!-- Skill Bars -->
-                    <div class="progress skill-bar" style="-webkit-box-shadow:0 0 20px blue; -moz-box-shadow: 0 0 20px blue; box-shadow:0 0 20px blue;" >
-                        <div class="progress-bar" style="background-color: #1b6d85" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                            <span class="skill">HTML </span>
+                    <div class="super text-center">
+                        <div style="padding-bottom: 5px;">
+                            <img src="../images/logo/html5.png" style="height: 10vh; height: 5vw;" />
                         </div>
-                    </div>
-
-                    <div class="progress skill-bar">
-                        <div class="progress-bar progress-bar-info" style="background-color : rgb(244, 67, 54)" role="progressbar" aria-valuenow={{skills.css}} aria-valuemin="0" aria-valuemax="100" >
-                            <span class="skill">CSS</span>
+                        <div class="progress skill-bar" >
+                            <!--style="-webkit-box-shadow:0 0 20px blue; -moz-box-shadow: 0 0 20px blue; box-shadow:0 0 20px blue;" >-->
+                            <div class="progress-bar" style="background-color: #ff5722" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                            </div>
                         </div>
-                    </div>
-
-                    <div class="progress skill-bar">
-                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                            <span class="skill">JavaScript</span>
-                        </div>
-                    </div>
-
-                    <div class="progress skill-bar">
-                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
-                            <span class="skill">Photoshop</span>
+                        <div class="skill-name">
+                            <h5 class="roboto">HTML</h5>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-2">
                     <!-- Skill Bars -->
-                    <div class="progress skill-bar">
-                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                            <span class="skill">HTML </span>
+                    <div class="super text-center">
+                        <div style="padding-bottom: 5px;">
+                            <img src="../images/logo/html5.png" style="height: 10vh; height: 5vw;" />
                         </div>
-                    </div>
-
-                    <div class="progress skill-bar">
-                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" >
-                            <span class="skill">CSS</span>
+                        <div class="progress skill-bar" >
+                            <!--style="-webkit-box-shadow:0 0 20px blue; -moz-box-shadow: 0 0 20px blue; box-shadow:0 0 20px blue;" >-->
+                            <div class="progress-bar" style="background-color: #ff5722" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                            </div>
                         </div>
-                    </div>
-
-                    <div class="progress skill-bar">
-                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                            <span class="skill">JavaScript</span>
-                        </div>
-                    </div>
-
-                    <div class="progress skill-bar">
-                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
-                            <span class="skill">Photoshop</span>
+                        <div class="skill-name">
+                            <h5 class="roboto">HTML</h5>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-2">
                     <!-- Skill Bars -->
-                    <div class="progress skill-bar">
-                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                            <span class="skill">HTML </span>
+                    <div class="super text-center">
+                        <div style="padding-bottom: 5px;">
+                            <img src="../images/logo/css31600.png" style="height: 10vh; height: 5vw;" />
+                        </div>
+                        <div class="progress skill-bar" >
+                            <!--style="-webkit-box-shadow:0 0 20px blue; -moz-box-shadow: 0 0 20px blue; box-shadow:0 0 20px blue;" >-->
+                            <div class="progress-bar" style="background-color: #2196f3" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                            </div>
+                        </div>
+                        <div class="skill-name">
+                            <h5 class="roboto">HTML</h5>
                         </div>
                     </div>
-
-                    <div class="progress skill-bar">
-                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" >
-                            <span class="skill">CSS</span>
+                </div>
+                <div class="col-md-2">
+                    <!-- Skill Bars -->
+                    <div class="super text-center">
+                        <div style="padding-bottom: 5px;">
+                            <img src="../images/logo/html5.png" style="height: 10vh; height: 5vw;" />
+                        </div>
+                        <div class="progress skill-bar" >
+                            <!--style="-webkit-box-shadow:0 0 20px blue; -moz-box-shadow: 0 0 20px blue; box-shadow:0 0 20px blue;" >-->
+                            <div class="progress-bar" style="background-color: #ff5722" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                            </div>
+                        </div>
+                        <div class="skill-name">
+                            <h5 class="roboto">HTML</h5>
                         </div>
                     </div>
-
-                    <div class="progress skill-bar">
-                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                            <span class="skill">JavaScript</span>
+                </div>
+                <div class="col-md-2">
+                    <!-- Skill Bars -->
+                    <div class="super text-center">
+                        <div style="padding-bottom: 5px;">
+                            <img src="../images/logo/html5.png" style="height: 10vh; height: 5vw;" />
+                        </div>
+                        <div class="progress skill-bar" >
+                            <!--style="-webkit-box-shadow:0 0 20px blue; -moz-box-shadow: 0 0 20px blue; box-shadow:0 0 20px blue;" >-->
+                            <div class="progress-bar" style="background-color: #ff5722" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                            </div>
+                        </div>
+                        <div class="skill-name">
+                            <h5 class="roboto">HTML</h5>
                         </div>
                     </div>
-
-                    <div class="progress skill-bar">
-                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
-                            <span class="skill">Photoshop</span>
+                </div>
+                <div class="col-md-2">
+                    <!-- Skill Bars -->
+                    <div class="super text-center">
+                        <div style="padding-bottom: 5px;">
+                            <img src="../images/logo/css31600.png" style="height: 10vh; height: 5vw;" />
+                        </div>
+                        <div class="progress skill-bar" >
+                            <!--style="-webkit-box-shadow:0 0 20px blue; -moz-box-shadow: 0 0 20px blue; box-shadow:0 0 20px blue;" >-->
+                            <div class="progress-bar" style="background-color: #2196f3" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                            </div>
+                        </div>
+                        <div class="skill-name">
+                            <h5 class="roboto">HTML</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <!-- Skill Bars -->
+                    <div class="super text-center">
+                        <div style="padding-bottom: 5px;">
+                            <img src="../images/logo/html5.png" style="height: 10vh; height: 5vw;" />
+                        </div>
+                        <div class="progress skill-bar" >
+                            <!--style="-webkit-box-shadow:0 0 20px blue; -moz-box-shadow: 0 0 20px blue; box-shadow:0 0 20px blue;" >-->
+                            <div class="progress-bar" style="background-color: #ff5722" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                            </div>
+                        </div>
+                        <div class="skill-name">
+                            <h5 class="roboto">HTML</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <!-- Skill Bars -->
+                    <div class="super text-center">
+                        <div style="padding-bottom: 5px;">
+                            <img src="../images/logo/html5.png" style="height: 10vh; height: 5vw;" />
+                        </div>
+                        <div class="progress skill-bar" >
+                            <!--style="-webkit-box-shadow:0 0 20px blue; -moz-box-shadow: 0 0 20px blue; box-shadow:0 0 20px blue;" >-->
+                            <div class="progress-bar" style="background-color: #ff5722" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                            </div>
+                        </div>
+                        <div class="skill-name">
+                            <h5 class="roboto">HTML</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <!-- Skill Bars -->
+                    <div class="super text-center">
+                        <div style="padding-bottom: 5px;">
+                            <img src="../images/logo/css31600.png" style="height: 10vh; height: 5vw;" />
+                        </div>
+                        <div class="progress skill-bar" >
+                            <!--style="-webkit-box-shadow:0 0 20px blue; -moz-box-shadow: 0 0 20px blue; box-shadow:0 0 20px blue;" >-->
+                            <div class="progress-bar" style="background-color: #2196f3" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                            </div>
+                        </div>
+                        <div class="skill-name">
+                            <h5 class="roboto">HTML</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <!-- Skill Bars -->
+                    <div class="super text-center">
+                        <div style="padding-bottom: 5px;">
+                            <img src="../images/logo/html5.png" style="height: 10vh; height: 5vw;" />
+                        </div>
+                        <div class="progress skill-bar" >
+                            <!--style="-webkit-box-shadow:0 0 20px blue; -moz-box-shadow: 0 0 20px blue; box-shadow:0 0 20px blue;" >-->
+                            <div class="progress-bar" style="background-color: #ff5722" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                            </div>
+                        </div>
+                        <div class="skill-name">
+                            <h5 class="roboto">HTML</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <!-- Skill Bars -->
+                    <div class="super text-center">
+                        <div style="padding-bottom: 5px;">
+                            <img src="../images/logo/html5.png" style="height: 10vh; height: 5vw;" />
+                        </div>
+                        <div class="progress skill-bar" >
+                            <!--style="-webkit-box-shadow:0 0 20px blue; -moz-box-shadow: 0 0 20px blue; box-shadow:0 0 20px blue;" >-->
+                            <div class="progress-bar" style="background-color: #ff5722" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                            </div>
+                        </div>
+                        <div class="skill-name">
+                            <h5 class="roboto">HTML</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <!-- Skill Bars -->
+                    <div class="super text-center">
+                        <div style="padding-bottom: 5px;">
+                            <img src="../images/logo/css31600.png" style="height: 10vh; height: 5vw;" />
+                        </div>
+                        <div class="progress skill-bar" >
+                            <!--style="-webkit-box-shadow:0 0 20px blue; -moz-box-shadow: 0 0 20px blue; box-shadow:0 0 20px blue;" >-->
+                            <div class="progress-bar" style="background-color: #2196f3" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                            </div>
+                        </div>
+                        <div class="skill-name">
+                            <h5 class="roboto">HTML</h5>
                         </div>
                     </div>
                 </div>
